thumbnails in album views, checkboxes to control bin and thumbnail directory rendering